--- a/AndroidChess/app/src/main/res/layout/activity_main.xml
+++ b/AndroidChess/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="-28dp">
 
     <TextView
         android:id="@+id/titleAndAuthor"
         android:layout_width="176dp"
         android:layout_height="36dp"
-        android:layout_marginStart="117dp"
-        android:layout_marginTop="94dp"
-        android:layout_marginEnd="118dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="17dp"
         android:fontFamily="sans-serif-black"
         android:text="Chess by Group50"
         android:textColor="@android:color/holo_purple"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,12 +30,13 @@
         android:layout_width="137dp"
         android:layout_height="347dp"
         android:layout_marginStart="137dp"
+        android:layout_marginTop="17dp"
         android:layout_marginEnd="137dp"
         android:src='@drawable/logo'
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.851"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="147dp" />
+        app:layout_constraintTop_toBottomOf="@+id/titleAndAuthor" />
 
     <Button
         android:id="@+id/startButton"
@@ -51,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.241" />
 
     <Button
         android:id="@+id/prevGames"
@@ -65,6 +67,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.258" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
