--- a/AndroidChess/app/src/main/res/layout/black_wins.xml
+++ b/AndroidChess/app/src/main/res/layout/black_wins.xml
@@ -10,10 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="158dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="164dp"
         android:layout_marginEnd="157dp"
         android:text="Game Over"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +49,7 @@
         android:layout_marginStart="62dp"
         android:layout_marginTop="44dp"
         android:text="No"
-        android:onClick="returnToMainScreen"
+        android:onClick="returnToMainMenu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
