--- a/AndroidChess/app/src/main/res/layout/draw_screen.xml
+++ b/AndroidChess/app/src/main/res/layout/draw_screen.xml
@@ -10,10 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="175dp"
-        android:layout_marginTop="187dp"
+        android:layout_marginTop="164dp"
         android:layout_marginEnd="174dp"
         android:text="Draw!"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +50,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="66dp"
         android:text="No"
-        android:onClick="returnToMainScreen"
+        android:onClick="returnToMainMenu"
         app:layout_constraintEnd_toStartOf="@+id/yes_draw"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
