--- a/AndroidChess/app/src/main/res/layout/games_list.xml
+++ b/AndroidChess/app/src/main/res/layout/games_list.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="122dp"
         android:layout_marginBottom="7dp"
         android:text="Sort by Date"
+        android:onClick="titleSort"
         app:layout_constraintBottom_toTopOf="@+id/button_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -29,8 +30,10 @@
         android:layout_marginEnd="118dp"
         android:layout_marginBottom="1dp"
         android:text="Sort by Title"
+        android:onClick="dateSort"
         app:layout_constraintBottom_toTopOf="@+id/game_list"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_date" />
 
@@ -50,13 +53,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="59dp"
         android:layout_marginEnd="142dp"
-        android:layout_marginBottom="136dp"
-        android:text="Back"
+        android:layout_marginBottom="99dp"
         android:onClick="goBack"
+        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/game_list" />
 
