--- a/AndroidChess/app/src/main/res/layout/save_game.xml
+++ b/AndroidChess/app/src/main/res/layout/save_game.xml
@@ -10,25 +10,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="285dp"
         android:layout_marginEnd="104dp"
-        android:layout_marginBottom="45dp"
         android:text="Please enter a title for this game"
-        app:layout_constraintBottom_toTopOf="@+id/game_title"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="157dp" />
 
     <Button
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="216dp"
+        android:layout_marginStart="147dp"
+        android:layout_marginTop="67dp"
+        android:layout_marginEnd="146dp"
+        android:layout_marginBottom="211dp"
         android:text="Submit"
-        android:onClick="saveAndReturnToMainScreen"
+        android:onClick="saveAndReturnToMainMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,14 +37,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginBottom="73dp"
+        android:layout_marginBottom="68dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Enter Title Here"
         app:layout_constraintBottom_toTopOf="@+id/submit_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
