--- a/AndroidChess/app/src/main/res/layout/white_wins.xml
+++ b/AndroidChess/app/src/main/res/layout/white_wins.xml
@@ -48,7 +48,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="40dp"
         android:text="No"
-        android:onClick="returnToMainScreen"
+        android:onClick="returnToMainMenu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
